# crudzin

./: .gitignore  README.md  pyproject.toml
crudzin/: __init__.py  books.py  model.py  serealizer.py
migrations/versions/: 13101316da42_.py  aae4003309f9_first_test.py
