[tool.poetry]
name = "crudzin"
version = "0.1.0"
description = ""
authors = ["oTerra <tdfvini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flask = "^3.0.2"
requests = "^2.31.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
